--- a/style/mixins/input.less
+++ b/style/mixins/input.less
@@ -132,6 +132,10 @@
     vertical-align: middle;
   }
 
+  &-wrap > * {
+    display: block;
+  }
+
   .@{inputClass} {
     position: relative;
     z-index: 2;
